// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен изменить элементы для текущего и предыдущего дня, если там нет данных 1`] = `
Array [
  Object {
    "date": "2019-01-01",
    "index": 0,
    "label": "20",
    "products": Array [
      Object {
        "color": "#C1B8E8",
        "label": "20",
        "name": "Посетители",
        "sum": 20,
      },
    ],
  },
  Object {
    "customTooltip": "Данные ещё собираются и будут готовы позже.",
    "date": "2019-01-05",
    "disabled": true,
    "index": 1,
    "label": "",
    "products": Array [
      Object {
        "sum": 460,
      },
    ],
  },
]
`;

exports[`должен обогащать статистику визитов лейблами, именами и цветами 1`] = `
Array [
  Object {
    "date": "2019-01-01",
    "index": 0,
    "label": "20",
    "products": Array [
      Object {
        "color": "#C1B8E8",
        "label": "20",
        "name": "Посетители",
        "sum": 20,
      },
    ],
  },
  Object {
    "date": "2019-01-02",
    "index": 1,
    "label": "60",
    "products": Array [
      Object {
        "color": "#C1B8E8",
        "label": "60",
        "name": "Посетители",
        "sum": 60,
      },
    ],
  },
]
`;
